# mc-server-updater

./: Cargo.toml  Cross.toml  LICENSE  README.md  todo.txt
src/: main.rs  notes.txt
src/modules/: downloader.rs  mod.rs  paper.rs
src/paper/: version_history.json
src/purpur/: version_history.json
src/variants/: mod.rs  paper.rs  purpur.rs
