[package]
name = "updater"
version = "2.2.2"
authors = ["Jai"]
edition = "2021"
description = "A tool to update Minecraft servers."


[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json", "brotli"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.0", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.57"
anyhow = "1.0.79"
regex = "1.10.3"
