[package]
name = "updater"
version = "2.2.2"
authors = ["Jai"]
edition = "2021"
description = "A tool to update Minecraft servers."

[profile.release] # Heavily optimised to minimise binary size, customise as needed.
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
reqwest = { version = "0.12.*", features = ["blocking", "json"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
clap = { version = "4.5.*", features = ["derive"] }
sha2 = "0.10.*"
thiserror = "1.0.*"
anyhow = "1.0.*"
indicatif = "0.17.*"
